Feature/service login (#67)
* Add credential interface to identity types, allow service to pull assertion options from diddoc

* Add credential interface to identity types, allow service to pull assertion options from diddoc

* * feat(config.go): add WithUsername option to set the username for the controller
* feat(api.go): add WithUsername option to NewController call in Keygen handler, passing the username from the request
* feat(config.go): add AlsoKnownAs field to the DID document if the username option is set

* Add Login handler

---------
